--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   app:
     build: .
@@ -22,7 +20,7 @@ services:
       - "3000:3000"
 
   mysql:
-    image: mysql:8.3
+    image: mysql:lts
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root-password
@@ -30,12 +28,12 @@ services:
       MYSQL_USER: terminal
       MYSQL_PASSWORD: terminal-password
     ports:
-      - "3306:3306"
+      - "5500:3306"
     volumes:
       - mysql-data:/var/lib/mysql
 
   timescale:
-    image: timescale/timescaledb:2.15.2-pg15
+    image: timescale/timescaledb:latest-pg17
     restart: unless-stopped
     environment:
       POSTGRES_DB: timescale
