--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed:all": "node index.js seed:all",
     "twd:asset-catalog": "node index.js twd:asset-catalog",
     "twd:exchange-catalog": "node index.js twd:exchange-catalog",
+    "watch-list:sync": "node index.js watch-list:sync",
     "dev": "nodemon index.js",
     "test": "node --test --test-reporter=spec test/**/*.test.js"
   },
