Refactor watch list assistant for new HF API

--- a/ai/watch-list-assistant/package.json
+++ b/ai/watch-list-assistant/package.json
@@ -13,5 +13,8 @@
   ],
   "author": "",
   "license": "MIT",
-  "type": "commonjs"
+  "type": "commonjs",
+  "dependencies": {
+    "dotenv": "^16.4.5"
+  }
 }
