--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ package-lock.json
 
 # Logs
 logs
+!ai/watch-list-assistant/logs/
+ai/watch-list-assistant/logs/*
+!ai/watch-list-assistant/logs/.gitkeep
 *.log
 npm-debug.log*
 yarn-debug.log*
