--- a/ai/watch-list-assistant/package.json
+++ b/ai/watch-list-assistant/package.json
@@ -4,7 +4,8 @@
   "description": "Proof-of-concept AI watch list assistant that queries a hosted model for macro-relevant assets.",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "testrun": "node src/testrun.js"
   },
   "keywords": [
     "ai",
