--- a/gui/.env.example
+++ b/gui/.env.example
@@ -1,9 +1,13 @@
-# Base URL for API requests in the browser (omit trailing slash)
-VITE_API_BASE_URL=http://localhost:3000
+# Base URL for API requests (no trailing slash)
+VITE_API_BASE_URL=https://api.example.com
 
-# Target used by the Vite dev server proxy
+# Auth0 configuration
+VITE_AUTH0_DOMAIN=your-tenant.auth0.com
+VITE_AUTH0_CLIENT_ID=your-auth0-client-id
+
+# Development proxy target for local API requests
 VITE_PROXY_TARGET=http://localhost:3000
 
-# Optional dev server port overrides
-# VITE_DEV_SERVER_PORT=5173
-# VITE_PREVIEW_PORT=4173
+# Optional: customize dev/preview ports
+VITE_DEV_SERVER_PORT=5173
+VITE_PREVIEW_PORT=4173
