--- a/gui/package.json
+++ b/gui/package.json
@@ -14,6 +14,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
