--- a/gui/package.json
+++ b/gui/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest run",
+    "msw:init": "msw init public --save",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\"",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "jsdom": "^24.0.0",
+    "msw": "^2.6.6",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3",
     "vite": "^5.2.0",
