--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "homepage": "https://github.com/kdanni/terminal.kdanni.org#readme",
   "dependencies": {
     "cors": "2.8.5",
+    "express-oauth2-jwt-bearer": "1.6.2",
     "dotenv": "17.2.1",
     "express": "5.1.0",
     "got": "14.4.7",
