--- a/gui/package.json
+++ b/gui/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.3.1",
+    "react-router-dom": "^6.28.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
