--- a/gui/package.json
+++ b/gui/package.json
@@ -18,7 +18,8 @@
     "@auth0/auth0-react": "^2.3.1",
     "react-router-dom": "^6.28.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "recharts": "^2.13.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
