Handle fund list via streaming parser

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "got": "14.4.7",
     "mysql2": "3.14.3",
     "pg": "8.11.5",
-    "pg-promise": "11.6.0"
+    "pg-promise": "11.6.0",
+    "stream-json": "1.9.1"
   }
 }
