--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watch-list:sync": "node index.js watch-list:sync",
     "ohlc:collect:daily": "node index.js ohlc:collect:daily",
     "ohlc:collect:hourly": "node index.js ohlc:collect:hourly",
+    "ohlc:excel": "node index.js ohlc:excel",
     "rank:exchange": "node index.js ranking:collect:exchanges",
     "crypto:bluechip:collect": "node index.js crypto:blue-chip:collect",
     "dev": "nodemon index.js",
